--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "goit-js-hw-10-food-service",
+  "name": "parcel-project-template",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://yefalek.github.io/goit-js-hw-10-food-service",
+  "homepage": "https://yefalek.github.io/goit-js-hw-10-food-service/",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://yefalek.com/goitacademy/goit-js-hw-10-food-service.git"
+    "url": "git+https://github.com/yefalek/goit-js-hw-10-food-service.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
